# tiny-projects

./: .gitignore  CONTEXT.md  README.md  index.html
01-toy-linux-kernel/: Dockerfile  entrypoint.sh  gotchas.md  spec.md
01-toy-linux-kernel/assets/: index.html
02-toy-browser-engine/: Dockerfile  entrypoint.sh  gotchas.md  spec.md
02-toy-browser-engine/assets/: index.html
03-homelab-k8s/: gotchas.md  spec.md
03-homelab-k8s/assets/: index.html
04-ben-eater-cpu/: gotchas.md  spec.md
04-ben-eater-cpu/assets/: index.html
05-toy-pytorch/: Dockerfile  README.md  entrypoint.sh  gotchas.md  spec.md
05-toy-pytorch/assets/: index.html
05-toy-pytorch/demos/: demo_moon.py  demo_sine.py
05-toy-pytorch/examples/: minimal.py
05-toy-pytorch/tests/: conftest.py  test_engine.py  test_loss.py  test_nn.py  test_optim.py  test_training.py  test_utils.py
05-toy-pytorch/toypytorch/: __init__.py  data.py  engine.py  loss.py  nn.py  optim.py  utils.py
06-toy-database/: Dockerfile  entrypoint.sh  gotchas.md  spec.md
06-toy-database/assets/: index.html
06-toy-database/toydb/: Cargo.toml  README.md
07-3d-physics-engine/: CONTEXT.md  Dockerfile  README.md  entrypoint.sh  gotchas.md  spec.md
07-3d-physics-engine/assets/: index.html
07-3d-physics-engine/examples/: 01-bouncing-spheres.cpp  02-box-stack.cpp  03-ramp-roll.cpp  04-gyroscope.cpp  05-stress-test.cpp  CMakeLists.txt
07-3d-physics-engine/src/: CMakeLists.txt
07-3d-physics-engine/src/app/: main.cpp
07-3d-physics-engine/src/collision/: broadphase.cpp  broadphase.h  contact.h  epa.h  gjk.h
07-3d-physics-engine/src/constraints/: solver.cpp  solver.h
07-3d-physics-engine/src/core/: rigid_body.cpp  rigid_body.h  simulation.h  sleep.h  world.cpp  world.h
07-3d-physics-engine/src/math/: mat3.h  math_utils.h  quat.h  vec3.h
07-3d-physics-engine/src/render/: debug_draw.h
07-3d-physics-engine/src/shapes/: box.h  plane.h  shape.h  sphere.h
07-3d-physics-engine/tests/: CMakeLists.txt  test_broadphase.cpp  test_epa.cpp  test_gjk.cpp  test_integration.cpp  test_mat3.cpp  test_quat.cpp  test_sleep.cpp  test_solver.cpp  test_vec3.cpp
08-tiny-claude-code/: CONTEXT.md  Dockerfile  agent.py  config.py  context.py  entrypoint.sh  gotchas.md  main.py  permissions.py  permissions.yaml  prompt.py  provider.py  render.py  requirements.txt  session.py  spec.md
08-tiny-claude-code/.claude/: settings.local.json
08-tiny-claude-code/assets/: index.html
08-tiny-claude-code/tests/: test_agent.py  test_context.py  test_files.py  test_integration.py  test_permissions.py  (+7 more)
(+23 files in other folders)
