function(add_physics_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE physics_core)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_physics_test(test_vec3)
add_physics_test(test_quat)
add_physics_test(test_mat3)
add_physics_test(test_integration)
add_physics_test(test_gjk)
add_physics_test(test_epa)
add_physics_test(test_solver)
add_physics_test(test_broadphase)
add_physics_test(test_sleep)
